frontend/src/css/loginUI.css
/* Basic Reset */
body {
    font-family: 'Gotham', Arial, sans-serif;
    background-color: #ffffff;
    color: #0a02a1;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
    padding: 0;
}

.login-container {
    background: #ffffff;
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    width: 340px;
    text-align: center;
    margin: 150px;
}


form {
    display: flex;
    flex-direction: column;
}

label {
    margin-bottom: 5px;
    color: #0a02a1;
}

input[type="text"], input[type="password"] {
    padding: 10px;
    margin-bottom: 10px;
    border: 1px solid #0a02a1;
    border-radius: 4px;
    font-size: 16px;
}

.login-container button {
    background-color: #0a02a1; /* Change the initial color to your theme blue */
    color: white;
    border: none;
    padding: 10px 20px; /* Adjust padding to reduce width */
    border-radius: 4px;
    cursor: pointer;
    font-size: 16px;
    transition: background-color 0.3s; /* Smooth transition for hover effect */
    width: 80%; /* Example to make it shorter lengthwise */
    margin: 0 auto; /* Center the button in the container */
}

.login-container button:hover {
    background-color: #ff4b92; /* Bright pink on hover */
}

.login-link {
    color: #0a02a1;
    cursor: pointer;
    text-decoration: underline;
}

.login-link:hover {
    color: #ff4b92;
}

